--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@netlify/remix-adapter": "^2.5.1",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@types/node": "^22.9.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
